[package]
name = "mirrorurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = [] }
scraper = "0.16.0"
url = "2.4.0"
mime = "0.3.17"
once_cell = "1.18.0"
