[package]
name = "mirrorurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["gzip", "brotli", "deflate"] }
scraper = "0.16.0"
url = "2.4.0"
mime = "0.3.17"
once_cell = "1.18.0"
futures = "0.3.28"
clap = { version = "4.3.3", features = ["derive"] }
num_cpus = "1.15.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0"
