cargo-features = ["profile-rustflags"]

[package]
name = "mirrorurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["gzip", "brotli", "deflate"] }
scraper = "0.17.1"
url = "2.4.0"
mime = "0.3.17"
once_cell = "1.18.0"
clap = { version = "4.3.3", features = ["derive"] }
num_cpus = "1.15.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0"
log = { version = "0.4.19", features = ["std"] }
thread_local = "1.1.7"
lazy_static = "1.4.0"
num = "0.4.1"

[dev-dependencies]
httptest = "0.15.4"
tempdir = "0.3.7"

[profile.release]
lto = true

[profile.release-with-debug]
inherits = "release"
debug = true

[profile.test-coverage]
inherits = "test"
rustflags = ["-C", "instrument-coverage"]
